--- a/components/selfList/list.wxss
+++ b/components/selfList/list.wxss
@@ -35,10 +35,14 @@
   color: grey;
 }
 .tag{
-  background: #5bce5a;
+  background:  #3c8dbc;
   font-size: 30rpx;
   color: white;
   border-radius: 3px;
   padding: 3px;
   margin: 4px;
+}
+.type{
+   font-size: 12px;
+  color: #b71ed7;
 }
