--- a/pages/ask/publish.wxml
+++ b/pages/ask/publish.wxml
@@ -33,7 +33,7 @@
     选择标签
   </view>
 <view class="section">
-    <button class='send' bindtap='bindSubmit' type='primary'>发布</button>
+    <button class='send' bindtap='bindSubmit'>发布</button>
 </view>
 </view>
 
@@ -42,7 +42,7 @@
 <view class='modal' hidden='{{hide}}' catchtap='hideTag'>
   <view class='box'>
     <tag tags="{{tags}}" bindswitchTag="switchTag"></tag>
-    <button class='comfirm' type='primary' catchtap='hideTag'>确认</button>
+    <button class='comfirm' catchtap='hideTag'>确认</button>
   </view>
 </view>
 
