--- a/pages/post/post.wxss
+++ b/pages/post/post.wxss
@@ -15,6 +15,7 @@
   width: 60rpx;
   height: 60rpx;
   border-radius: 50%;
+  margin-right: 15px;
 }
 .msg{
   font-size: 28rpx;
@@ -24,12 +25,15 @@
   padding-bottom: 20rpx;
 }
 .tag{
-  background: #5bce5a;
+  /* background: #5bce5a; */
+  background: #3c8dbc;
   font-size: 30rpx;
   color: white;
   border-radius: 3px;
   padding: 3px;
   margin: 4px;
+  white-space: nowrap;
+  display: inline;
 }
 .info{
   height: 160rpx;
@@ -92,6 +96,8 @@
   line-height: 70rpx;
   padding: 0;
   margin-right: 20rpx;
+  background: #75adff;
+  color: white;
 }
 .reply{
   background: rgb(233, 232, 232);
