--- a/pages/publish/publish.wxss
+++ b/pages/publish/publish.wxss
@@ -33,7 +33,8 @@
   overflow: hidden;
   position: relative;
   left: 0;
-  background: #5bce5a;
+  /* background: #5bce5a; */
+  background: #75adff;
 }
 .nav-title{
   width: 120rpx;
@@ -82,6 +83,8 @@
   position: fixed;
   left: 50%;
   bottom: 30rpx;
+  background: #75adff;
+  color: white;
 }
 .modal{
   position: fixed;
@@ -91,6 +94,7 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
   padding-top: 70%;
+  z-index: 999;
 }
 .box{
   width: 80%;
@@ -109,6 +113,8 @@
   margin-left: 50%;
   transform: translateX(-50%);
   margin-top: 26rpx;
+  background: #75adff;
+  color: white;
 }
 .showTag{
   margin-bottom: 60px;
