--- a/pages/sight/sight.wxml
+++ b/pages/sight/sight.wxml
@@ -35,9 +35,9 @@
 </view>
 
 <view class='tips'>
-<view class='tab'>
+<!-- <view class='tab'>
 <view class='inner'><text class='iconfont icon-shoucang'></text> 收藏</view>
-</view>
+</view> -->
 <view class='tab'>
   <button open-type='share' class='inner share iconfont icon-fabu'> 分享</button> 
 </view>
