--- a/pages/answer/answer.wxml
+++ b/pages/answer/answer.wxml
@@ -1,11 +1,11 @@
 <!--pages/answer/answer.wxml-->
-<view class='container'>
+<view class='container' bindtap='hidePush'>
   <view class='content'>
     <view class='title'>{{item.title}}</view>
     <view class='title description'>{{item.content}}</view>
     <view class='info'>
     {{item.pv}}次浏览   发表于{{item.moment}}
-     <text wx:if="{{item.uid==userId}}" bindtap='onDelete' class='delete'>删除</text>
+     <text wx:if="{{item.uid==userId}}" catchtap='onDelete' class='delete'>删除</text>
     </view>
   </view>
 
@@ -14,7 +14,7 @@
    </view>
 
   {{item.answer}}条回答
-  <view class='answer' wx:for="{{answers}}" wx:for-item="item" wx:key="{{item}}">
+  <view class='answer' wx:for="{{answers}}" wx:for-item="item" wx:key="{{item}}" bindlongpress='onPush'>
     <view class='user msg'>
       <image src="{{item.avator}}"></image>
       <view class='username'> {{item.username}}</view>
@@ -25,7 +25,7 @@
      <view class="zan iconfont {{item.is_support ? 'icon-dianzan': 'icon-like'}}"
       id="{{item.id}}"
       data-support='{{item.is_support}}'
-      bindtap='onSupport'>
+      catchtap='onSupport'>
        {{item.support}}
        </view>
     </view>
@@ -48,13 +48,19 @@
 </view>
 <view class='tab'  hidden='{{show}}'>
 <view class='inner'>
-<text class='send' bindtap='onSend'>发送</text>
+<text class='send' catchtap='onSend'>发送</text>
 </view>
 </view>
 <view class='tab' hidden='{{!show}}'>
-<view class='inner'><text class="iconfont icon-shoucang{{item.is_collect ? 1:''}}" bindtap='onCollect'></text> {{item.collection}}</view>
+<view class='inner'><text class="iconfont icon-shoucang{{item.is_collect ? 1:''}}" catchtap='onCollect'></text> {{item.collection}}</view>
 </view>
 <view class='tab' hidden='{{!show}}'>
   <button open-type='share' class='inner share iconfont icon-fabu'> 分享</button> 
 </view>
 </view>
+
+
+  <view class='box' hidden='{{hide}}'>
+    <view>举报</view>
+    <view>回复</view>
+  </view>
