--- a/pages/answer/answer.wxss
+++ b/pages/answer/answer.wxss
@@ -109,3 +109,23 @@
   color: white;
   text-shadow: 0 0 5px black;
 }
+
+.box{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  box-shadow: 0 0 3px #000;
+  padding: 40rpx 40rpx;
+  transform: translate(-50%,-50%);
+  background: #fff;
+  border-radius: 5px;
+}
+.box view{
+  text-align: center;
+  border-bottom: 1px solid #c2c1c1;
+}
+.box view:last-child{
+  border: none;
+}
+
